<resources>
    <string name="app_name">SocialAnxietyTrainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Social Anxiety Trainer</string>
    <string name="nav_header_subtitle">Overcome your social anxiety</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="score_title">Score:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="demo">Button</string>

    <string name="close">Close</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_microsoft_band">Connect Microsoft Band</string>
    <string name="title_activity_task_selction">Select a Task</string>
    <string name="textView_curr_anxiety_level">Current anxiety level:</string>
    <string name="title_quiz_activity">Questionnaire</string>
    <string name="resting_hr">You have not set your resting heart rate yet. Press start to track your resting heart rate.
        This will take 30 seconds and helps to improve the accuracy of your anxiety level.
    </string>
    <string name="rating_string">How comfortable did you feel during the task from 1 (very uncomfortable) to 10 (very comfortable)?</string>
    <string name="finished_string">Congratulations! You finished the task!</string>
    <string name="submit">submit</string>

    <!-- Strings for shared preferences -->
    <string name="shared_preferences">shared</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="tab_text_1">1</string>
    <string name="tab_text_2">2</string>
    <string name="tab_text_3">3</string>
    <string name="tab_text_4">4</string>
    <string name="tab_text_5">5</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="gender_name_female">Female</string>
    <string name="gender_name_male">Male</string>
    <string name="select_gender_text">Please select your gender. This helps to improve the accuracy of your questionnaire results. </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

</resources>
